media source bug

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="menu-items">
             <ul>
                 <li><a href="/kampanyalar">Kampanyalar <img src="media/icons/campaign-icon.svg"></a></li>
-                <li><a href="/user/tickets">Biletlerim <img src="/media/icons/ticket-icon.svg" > </a></li>
+                <li><a href="/user/tickets">Biletlerim <img src="media/icons/ticket-icon.svg" > </a></li>
                 <li><a href="/tur">Yunan Adaları Turları <img src="media/icons/tour-icon.svg" > </a></li>
                 <li><a href="/yunanistan-vizesi">Yunanistan Vizesi <img src="media/icons/visa-icon.svg" > </a></li>
                 <hr>
@@ -160,35 +160,35 @@
     <div class="mobileSearchNav">
         <div class="msn-item" type="button" data-bs-toggle="modal" data-bs-target="#ferryModal">
             <a href="#">
-                <p><img src="/media/icons/ferry-icon.svg" alt="Feribot"></p>
+                <p><img src="media/icons/ferry-icon.svg" alt="Feribot"></p>
                 <p>Feribot</p>
             </a>
         </div>
         <!---->
         <div class="msn-item" type="button" data-bs-toggle="modal" data-bs-target="#tourModal">
             <a href="#">
-                <p><img src="/media/icons/tour-icon1.svg" alt="Tur"></p>
+                <p><img src="media/icons/tour-icon1.svg" alt="Tur"></p>
                 <p>Tur</p>
             </a>
         </div> 
         <!---->
         <div class="msn-item" type="button" data-bs-toggle="modal" data-bs-target="#hotelModal">
             <a href="#">
-                <p><img src="/media/icons/hotel-icon.svg" alt="Otel"></p>
+                <p><img src="media/icons/hotel-icon.svg" alt="Otel"></p>
                 <p>Otel</p>
             </a>
         </div>
         <!---->
         <div class="msn-item" type="button" data-bs-toggle="modal" data-bs-target="#cruiseModal">
             <a href="#">
-                <p><img src="/media/icons/cruise-icon.svg" alt="Cruise"></p>
+                <p><img src="media/icons/cruise-icon.svg" alt="Cruise"></p>
                 <p>Cruise</p>
             </a>
         </div>
         <!---->
         <div class="msn-item">
             <a href="yunanistan-vizesi" onclick="window.location.href='/yunanistan-vizesi'">
-                <p><img src="/media/icons/vize-icon.svg" alt="Vize"></p>
+                <p><img src="media/icons/vize-icon.svg" alt="Vize"></p>
                 <p>Vize</p>
             </a>
         </div>
@@ -553,7 +553,7 @@
           <ul class="splide__list">
             <div class="home-campaign-item">
                 <a href="https://feribotlines.com/kampanyalar">
-                    <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/palladium-plaj_u1jXSCc.jpg')">
+                    <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/palladium-plaj_u1jXSCc.jpg')">
                         <div class="badges">
                         </div>
                         <div class="campaign-title">Her Şey Dahil Rodos Tatili</div>
@@ -565,7 +565,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                 <a href="https://feribotlines.com/kampanyalar">
-                    <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/2-mitsis-kos-ramira-beach-drone2-hd_Ekh0asd.jpeg')">
+                    <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/2-mitsis-kos-ramira-beach-drone2-hd_Ekh0asd.jpeg')">
                         <div class="badges">
                         </div>
                         <div class="campaign-title">Her Şey Dahil Kos Tatili</div>
@@ -578,7 +578,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                     <a href="https://feribotlines.com/kampanyalar">
-                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/samos-adasi-400.jpg')">
+                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/samos-adasi-400.jpg')">
                             <div class="badges">
                             </div>
                             <div class="campaign-title">Samos Tatili</div>
@@ -591,7 +591,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                     <a href="https://feribotlines.com/kampanyalar">
-                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/sakiz-adasi-400.jpg')">
+                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/sakiz-adasi-400.jpg')">
                             <div class="badges">
                             </div>
                             <div class="campaign-title">Sakız Adası Tatili</div>
@@ -604,7 +604,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                     <a href="https://feribotlines.com/kampanyalar">
-                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/olive-press.jpg')">
+                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/olive-press.jpg')">
                             <div class="badges">
                             </div>
                             <div class="campaign-title">Midilli Adası Tatili</div>
@@ -617,7 +617,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                     <a href="https://feribotlines.com/kampanyalar">
-                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/rodos-adasi-400.jpg')">
+                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/rodos-adasi-400.jpg')">
                             <div class="badges">
                             </div>
                             <div class="campaign-title">Rodos Tatili</div>
@@ -630,7 +630,7 @@
             <li class="splide__slide">
                 <div class="home-campaign-item">
                     <a href="https://feribotlines.com/kampanyalar">
-                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('/media/photo/kos.png')">
+                        <div class="image" style="background-image:linear-gradient(to bottom, rgba(43, 57, 145, 0.5), #2b3991), url('media/photo/kos.png')">
                             <div class="badges">
                             </div>
                             <div class="campaign-title">Kos Tatili</div>
@@ -752,7 +752,7 @@
             </p>
             <div class="btm hide">
             <h3>Tanıtım Videosu</h3>
-            <img src="/media/icons/present-arrow.png">
+            <img src="media/icons/present-arrow.png">
             </div>
         </div>
         <!-- - -->
